--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header .judul {
     border-top: 5px solid red;
     border-bottom: 5px solid lightblue;
     height: 300px;
-    background-position: 150px 0;
+    background-position: center;
 }
 
 main {
@@ -140,6 +140,10 @@ footer {
         "main aside"
         "footer footer";
     }
+
+    /* .hero {
+        background-position: 0 -30px;
+    } */
 }
 
 @media screen and (min-width: 992px) {
@@ -151,4 +155,8 @@ footer {
         "main aside"
         "footer footer";
     }
+
+    /* .hero {
+        background-position: center;
+    } */
 }
