--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+del, dfn, em, img, ins, kbd, q, s, samp, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -45,7 +44,7 @@ table {
 
 /* Style */
 body {
-    font: 1.3em/1em arial, sans-serif;
+    font: 22px/24px arial, sans-serif;
     background-color: black;
     color: #333;
     background-image: url(res/mainback.png);
@@ -54,16 +53,15 @@ body {
 .container {
     width: 95%;
     grid-template-areas: 
-        "header header"
-        "hero hero"
-        "main main"
-        "aside aside"
-        "footer footer";
+        "header"
+        "hero"
+        "content"
+        "footer";
     margin: 10px auto;
     background-color: white;
     display: grid;
     gap: 1em;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: minmax(1fr, auto);
 }
 
@@ -74,7 +72,7 @@ header {
 }
 
 header .judul {
-    font-size: 2.5em;
+    font-size: 40px;
     font-weight: bold;
 }
 
@@ -88,29 +86,39 @@ header .judul {
     background-position: center;
 }
 
-main {
-    box-sizing: border-box;
+.content {
+    grid-area: content;
+}
+
+.article {
+    display: grid;
+    gap: 1em;
+    grid-template-columns: 2fr 1fr;
+    grid-template-areas: 
+        "main main"
+        "aside aside";
+}
+
+.article main {
     grid-area: main;
+}
+
+.article aside {
+    grid-area: aside;
+}
+
+main, aside {
+    box-sizing: border-box;
     padding: 15px;
 }
 
 main h2 {
-    font-size: 1.5em;
+    font-size: 30px;
     font-weight: bold;
 }
 
-main .penulis {
-    font-size: 0.7em;
-}
-
 main p {
-    margin-bottom: 10px;
-    font-size: .9em;
-}
-
-aside {
-    padding: 15px;
-    grid-area: aside;
+    margin: 10px auto;
 }
 
 aside .profile {
@@ -128,7 +136,7 @@ aside h3 {
 }
 
 aside p {
-    font-size: 0.8em;
+    font-size: 16px;
 }
 
 aside img {
@@ -170,11 +178,11 @@ td a {
 @media screen and (min-width: 992px) {
     .container {
         width: 900px;
+    }
+
+    .article {
         grid-template-areas: 
-        "header header"
-        "hero hero"
-        "main aside"
-        "footer footer";
+        "main aside";
     }
 
     aside .profile {
